--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,7 +4,7 @@
 </nav>
 
 <section class="main-section hero" id="landing-section">
-	<h3>Hi, Im a fullstack web developer and my name is</h3>
+	<h3>Hi, Im a <b>{ fullstack web developer }</b> and my name is</h3>
 	<h1 class="hero-title">Andréas Blin</h1>
 	<h2 class="hero-secondary-title">I will build the website you've been dreaming of</h2>
 
@@ -29,6 +29,7 @@
 		<div class="skills-section">
 			<h2>Front-end</h2>
 			<div class="skills-wrapper">
+				<h1>{</h1>
 				<div class="wrapper-icon">
 					<div>
 						<img class="skill-icon" src="/img/icons/javascript_icon.png" alt="Javascript" />
@@ -60,12 +61,14 @@
 					</div>
 					<label>Bootstrap</label>
 				</div>
+				<h1>}</h1>
 			</div>
 		</div>
 
 		<div class="skills-section">
 			<h2>Back-end</h2>
 			<div class="skills-wrapper">
+				<h1>{</h1>
 				<div class="wrapper-icon">
 					<div>
 						<img class="skill-icon" src="/img/icons/nodejs_icon.png" alt="NodeJS" />
@@ -96,12 +99,14 @@
 					</div>
 					<label>S3</label>
 				</div>
+				<h1>}</h1>
 			</div>
 		</div>
 
 		<div class="skills-section">
 			<h2>Misc</h2>
 			<div class="skills-wrapper">
+				<h1>{</h1>
 				<div class="wrapper-icon">
 					<div>
 						<img class="skill-icon" src="/img/icons/git_icon.png" alt="Git" />
@@ -121,6 +126,7 @@
 					</div>
 					<label>Shell</label>
 				</div>
+				<h1>}</h1>
 			</div>
 		</div>
 	</div>
