--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -21,6 +21,10 @@
 			crossorigin="anonymous"
 		></script>
 
+		<!-- fullpage-->
+		<script src="/scripts/fullpage.min.js"></script>
+		<link rel="stylesheet" href="/fullpage.min.css" />
+
 		<!-- FontAwesome Icons -->
 		<script src="https://kit.fontawesome.com/ba18cbd714.js"></script>
 
