--- a/views/index.ejs
+++ b/views/index.ejs
@@ -36,7 +36,6 @@
 						</div>
 						<label>Javascript</label>
 					</div>
-
 					<div class="wrapper-icon">
 						<div>
 							<img class="skill-icon" src="/img/icons/html_icon.png" alt="HTML5" />
@@ -48,6 +47,12 @@
 							<img class="skill-icon" src="/img/icons/css_icon.png" alt="CSS3" />
 						</div>
 						<label>CSS3</label>
+					</div>
+					<div class="wrapper-icon">
+						<div>
+							<img class="skill-icon" src="/img/icons/sass_icon.png" alt="SASS" />
+						</div>
+						<label>SASS</label>
 					</div>
 					<div class="wrapper-icon">
 						<div>
