--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -29,7 +29,7 @@
 		<script src="https://kit.fontawesome.com/ba18cbd714.js"></script>
 
 		<script src="/scripts/core/main.js"></script>
-		<link rel="stylesheet" href="/style.css" />
+		<link rel="stylesheet" href="/main.css" />
 	</head>
 	<body></body>
 </html>
