--- a/public/main.css
+++ b/public/main.css
@@ -110,6 +110,14 @@ body {
   display: flex !important;
 }
 
+.fp-controlArrow.fp-next {
+  right: 50px;
+}
+
+.fp-controlArrow.fp-prev {
+  left: 50px;
+}
+
 input,
 textarea {
   background-color: #e6e6e6 !important;
@@ -164,6 +172,7 @@ select:-webkit-autofill {
   -webkit-transition: ease-in-out 0.3s;
   transition: ease-in-out 0.3s;
   /* causes brand to slide in */
+  padding: 0;
 }
 
 .navbar-brand:hover {
@@ -172,6 +181,33 @@ select:-webkit-autofill {
 
 .navbar-dark {
   background-color: transparent !important;
+}
+
+.navbar-nav {
+  margin-right: 3%;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: row;
+          flex-direction: row;
+}
+
+.navbar-nav li {
+  margin: 0 20px;
+}
+
+.navbar-nav li a {
+  padding: 0;
+}
+
+.navbar-nav li a i {
+  color: var(--light-gray);
+  -webkit-transition: ease-in-out 0.3s;
+  transition: ease-in-out 0.3s;
+  font-size: 1.5em;
+}
+
+.navbar-nav li a i:hover {
+  color: var(--main-color);
 }
 
 /* END NAVBAR */
@@ -191,11 +227,11 @@ select:-webkit-autofill {
   background-color: var(--main-color);
 }
 
-.main-section .hero {
+.hero {
   position: relative;
 }
 
-.main-section.hero h3 {
+.hero h3 {
   font-size: 22px;
   color: var(--main-color);
   opacity: 0.85;
@@ -203,7 +239,7 @@ select:-webkit-autofill {
   margin-left: 13%;
 }
 
-.main-section.hero h3 b {
+.hero h3 b {
   font-size: 28px;
 }
 
@@ -279,18 +315,18 @@ select:-webkit-autofill {
   margin: 25px auto 15px auto;
 }
 
+.skills-section h2 {
+  font-size: 3rem;
+  color: var(--main-color);
+  opacity: 0.95;
+}
+
 .skills-text {
   text-align: center;
   color: var(--main-color);
   opacity: 0.95;
   font-size: 2em;
   margin-top: -25px;
-}
-
-.skills-section h2 {
-  font-size: 3rem;
-  color: var(--main-color);
-  opacity: 0.95;
 }
 
 .skills-wrapper {
@@ -311,12 +347,12 @@ select:-webkit-autofill {
   color: var(--dark-shade-m1);
 }
 
-.wrapper-icon {
+.skills-wrapper .wrapper-icon {
   margin: auto 0;
   padding: 0 10px;
 }
 
-.wrapper-icon div {
+.skills-wrapper .wrapper-icon div {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -325,13 +361,13 @@ select:-webkit-autofill {
           align-items: center;
 }
 
-.wrapper-icon label {
+.skills-wrapper .wrapper-icon label {
   display: block;
   text-align: center;
   color: var(--light-gray);
 }
 
-.skill-icon {
+.skills-wrapper .wrapper-icon .skill-icon {
   max-width: 100%;
   height: 80px;
   width: 80px;
@@ -361,6 +397,26 @@ select:-webkit-autofill {
   margin: 0 15px;
   width: 315px;
   text-align: right;
+}
+
+#portfolio-section .hero-title {
+  margin-bottom: -45px;
+}
+
+#portfolio-section .portfolio-thumbnail-wrapper {
+  margin: auto;
+  padding: 50px;
+  background-color: var(--dark-shade-m1);
+}
+
+#portfolio-section .portfolio-item h1 {
+  text-align: center;
+}
+
+#portfolio-section p {
+  text-align: center;
+  font-size: 20px;
+  margin-top: 10px;
 }
 
 /* END HOME */
